--- a/fonts/iosevka-custom/private-build-plans.toml
+++ b/fonts/iosevka-custom/private-build-plans.toml
@@ -41,7 +41,7 @@ capital-w = "straight-almost-flat-top-serifless"
 capital-x = "straight-serifless"
 capital-y = "straight-serifless"
 capital-z = "straight-serifless"
-a = "single-storey-tailed"
+a = "single-storey-serifed"
 b = "toothed-serifless"
 c = "serifless"
 d = "toothed-serifless"
@@ -49,7 +49,7 @@ e = "rounded"
 f = "flat-hook-serifless"
 g = "double-storey-open"
 h = "straight-serifless"
-i = "serifed-flat-tailed"
+i = "serifed-semi-tailed"
 j = "serifed"
 k = "curly-serifless"
 l = "serifed-semi-tailed"
@@ -139,7 +139,7 @@ capital-w = "straight-almost-flat-top-serifless"
 capital-x = "straight-serifless"
 capital-y = "straight-serifless"
 capital-z = "straight-serifless"
-a = "single-storey-tailed"
+a = "single-storey-serifed"
 b = "toothed-serifless"
 c = "serifless"
 d = "toothed-serifless"
@@ -147,7 +147,7 @@ e = "rounded"
 f = "flat-hook-serifless"
 g = "double-storey-open"
 h = "straight-serifless"
-i = "serifed-flat-tailed"
+i = "serifed-semi-tailed"
 j = "serifed"
 k = "curly-serifless"
 l = "serifed-semi-tailed"
@@ -222,7 +222,7 @@ menu = 600
 css = 600
 
 [buildPlans.IosevkaCustom.widths.Normal]
-shape = 586
+shape = 580
 menu = 5
 css = "normal"
 
