--- a/fonts/iosevka-custom/private-build-plans.toml
+++ b/fonts/iosevka-custom/private-build-plans.toml
@@ -42,25 +42,25 @@ capital-x = "straight-serifless"
 capital-y = "straight-serifless"
 capital-z = "straight-serifless"
 a = "single-storey-serifed"
-b = "toothed-serifless"
+b = "toothed-motion-serifed"
 c = "serifless"
-d = "toothed-serifless"
+d = "tailed-serifless"
 e = "rounded"
-f = "flat-hook-serifless"
+f = "serifless"
 g = "double-storey-open"
-h = "straight-serifless"
-i = "serifed-semi-tailed"
+h = "straight-top-left-serifed"
+i = "tailed-serifed"
 j = "serifed"
 k = "curly-serifless"
-l = "serifed-semi-tailed"
+l = "tailed-serifed"
 m = "serifless"
 n = "straight-serifless"
-p = "eared-serifless"
+p = "eared-motion-serifed"
 q = "straight-serifless"
-r = "serifless"
+r = "top-serifed"
 s = "serifless"
-t = "flat-hook-short-neck2"
-u = "tailed-serifless"
+t = "bent-hook-short-neck2"
+u = "toothed-bottom-right-serifed"
 v = "straight-serifless"
 w = "straight-almost-flat-top-serifless"
 x = "straight-serifless"
@@ -140,25 +140,25 @@ capital-x = "straight-serifless"
 capital-y = "straight-serifless"
 capital-z = "straight-serifless"
 a = "single-storey-serifed"
-b = "toothed-serifless"
+b = "toothed-motion-serifed"
 c = "serifless"
-d = "toothed-serifless"
+d = "tailed-serifless"
 e = "rounded"
-f = "flat-hook-serifless"
+f = "serifless"
 g = "double-storey-open"
-h = "straight-serifless"
-i = "serifed-semi-tailed"
+h = "straight-top-left-serifed"
+i = "tailed-serifed"
 j = "serifed"
 k = "curly-serifless"
-l = "serifed-semi-tailed"
+l = "tailed-serifed"
 m = "serifless"
 n = "straight-serifless"
-p = "eared-serifless"
+p = "eared-motion-serifed"
 q = "straight-serifless"
-r = "serifless"
+r = "top-serifed"
 s = "serifless"
-t = "flat-hook-short-neck2"
-u = "tailed-serifless"
+t = "bent-hook-short-neck2"
+u = "toothed-bottom-right-serifed"
 v = "straight-serifless"
 w = "straight-almost-flat-top-serifless"
 x = "straight-serifless"
