--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -3,6 +3,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'o0th/tmux-nova'
+set -g @plugin 'thewtex/tmux-mem-cpu-load'
 
 tmux_dir="~/.config/tmux"
 
