--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,7 +1,7 @@
 # vim:ft=config
 font-family = Iosevka Custom
-font-style = Medium
-font-style-bold = Bold
+font-style = Regular
+font-style-bold = SemiBold
 font-size = 16
 adjust-cell-height = 8
 adjust-cursor-height = 8
@@ -29,7 +29,7 @@ cursor-text = #1d202f
 background-opacity = 0.92
 background-blur-radius = 32
 
-window-width = 145
+window-width = 140
 window-height = 50
 
 cursor-style = block
