--- a/fonts/iosevka-custom/private-build-plans.toml
+++ b/fonts/iosevka-custom/private-build-plans.toml
@@ -37,34 +37,34 @@ capital-s = "serifless"
 capital-t = "serifless"
 capital-u = "toothless-rounded-serifless"
 capital-v = "straight-serifless"
-capital-w = "straight-almost-flat-top-serifless"
+capital-w = "straight-serifless"
 capital-x = "straight-serifless"
 capital-y = "straight-serifless"
 capital-z = "straight-serifless"
-a = "single-storey-serifed"
-b = "toothed-motion-serifed"
+a = "double-storey-serifless"
+b = "toothed-serifless"
 c = "serifless"
-d = "tailed-serifless"
-e = "rounded"
+d = "toothed-serifless"
+e = "flat-crossbar"
 f = "serifless"
-g = "double-storey-open"
-h = "straight-top-left-serifed"
-i = "tailed-serifed"
+g = "single-storey-serifless"
+h = "straight-serifless"
+i = "serifed"
 j = "serifed"
 k = "curly-serifless"
-l = "tailed-serifed"
+l = "serifed-semi-tailed"
 m = "serifless"
 n = "straight-serifless"
-p = "eared-motion-serifed"
+p = "eared-serifless"
 q = "straight-serifless"
-r = "top-serifed"
+r = "serifed"
 s = "serifless"
-t = "bent-hook-short-neck2"
-u = "toothed-bottom-right-serifed"
+t = "flat-hook-short-neck2"
+u = "toothed-serifless"
 v = "straight-serifless"
-w = "straight-almost-flat-top-serifless"
+w = "straight-flat-top-serifless"
 x = "straight-serifless"
-y = "cursive-serifless"
+y = "straight-turn-serifless"
 z = "straight-serifless"
 capital-eszet = "rounded-serifless"
 long-s = "bent-hook-diagonal-tailed"
@@ -135,32 +135,32 @@ capital-s = "serifless"
 capital-t = "serifless"
 capital-u = "toothless-rounded-serifless"
 capital-v = "straight-serifless"
-capital-w = "straight-almost-flat-top-serifless"
+capital-w = "straight-serifless"
 capital-x = "straight-serifless"
 capital-y = "straight-serifless"
 capital-z = "straight-serifless"
-a = "single-storey-serifed"
-b = "toothed-motion-serifed"
+a = "double-storey-serifless"
+b = "toothed-serifless"
 c = "serifless"
-d = "tailed-serifless"
-e = "rounded"
+d = "toothed-serifless"
+e = "flat-crossbar"
 f = "serifless"
-g = "double-storey-open"
-h = "straight-top-left-serifed"
-i = "tailed-serifed"
+g = "single-storey-serifless"
+h = "straight-serifless"
+i = "serifed"
 j = "serifed"
 k = "curly-serifless"
-l = "tailed-serifed"
+l = "serifed-semi-tailed"
 m = "serifless"
 n = "straight-serifless"
-p = "eared-motion-serifed"
+p = "eared-serifless"
 q = "straight-serifless"
-r = "top-serifed"
+r = "serifed"
 s = "serifless"
-t = "bent-hook-short-neck2"
-u = "toothed-bottom-right-serifed"
+t = "flat-hook-short-neck2"
+u = "toothed-serifless"
 v = "straight-serifless"
-w = "straight-almost-flat-top-serifless"
+w = "straight-flat-top-serifless"
 x = "straight-serifless"
 y = "cursive-serifless"
 z = "straight-serifless"
