--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,10 +1,10 @@
 # vim:ft=config
 font-family = Iosevka Custom
-font-style = Regular
-font-style-bold = SemiBold
-font-size = 16
-adjust-cell-height = 8
-adjust-cursor-height = 8
+font-style = Medium
+font-style-bold = Bold
+font-size = 15
+adjust-cell-height = 6
+adjust-cursor-height = 6
 adjust-cell-width = 0
 
 # Ligatures test M ç á ã â ä à å æ ç é è ê ë í ì î ï ñ ó ò ô ö ø ú ù û ü ý ÿ
@@ -29,7 +29,7 @@ cursor-text = #1d202f
 background-opacity = 0.92
 background-blur-radius = 32
 
-window-width = 140
+window-width = 145
 window-height = 50
 
 cursor-style = block
