--- a/fonts/iosevka-custom/private-build-plans.toml
+++ b/fonts/iosevka-custom/private-build-plans.toml
@@ -41,13 +41,13 @@ capital-w = "straight-serifless"
 capital-x = "straight-serifless"
 capital-y = "straight-serifless"
 capital-z = "straight-serifless"
-a = "double-storey-serifless"
+a = "single-storey-serifed"
 b = "toothed-serifless"
 c = "serifless"
 d = "toothed-serifless"
-e = "flat-crossbar"
-f = "serifless"
-g = "single-storey-serifless"
+e = "rounded"
+f = "flat-hook-serifless"
+g = "double-storey-open"
 h = "straight-serifless"
 i = "serifed"
 j = "serifed"
@@ -57,14 +57,14 @@ m = "serifless"
 n = "straight-serifless"
 p = "eared-serifless"
 q = "straight-serifless"
-r = "serifed"
+r = "serifless"
 s = "serifless"
 t = "flat-hook-short-neck2"
-u = "toothed-serifless"
+u = "tailed-serifless"
 v = "straight-serifless"
 w = "straight-flat-top-serifless"
 x = "straight-serifless"
-y = "straight-turn-serifless"
+y = "cursive-serifless"
 z = "straight-serifless"
 capital-eszet = "rounded-serifless"
 long-s = "bent-hook-diagonal-tailed"
@@ -139,13 +139,13 @@ capital-w = "straight-serifless"
 capital-x = "straight-serifless"
 capital-y = "straight-serifless"
 capital-z = "straight-serifless"
-a = "double-storey-serifless"
+a = "single-storey-serifed"
 b = "toothed-serifless"
 c = "serifless"
 d = "toothed-serifless"
-e = "flat-crossbar"
-f = "serifless"
-g = "single-storey-serifless"
+e = "rounded"
+f = "flat-hook-serifless"
+g = "double-storey-open"
 h = "straight-serifless"
 i = "serifed"
 j = "serifed"
@@ -155,10 +155,10 @@ m = "serifless"
 n = "straight-serifless"
 p = "eared-serifless"
 q = "straight-serifless"
-r = "serifed"
+r = "serifless"
 s = "serifless"
 t = "flat-hook-short-neck2"
-u = "toothed-serifless"
+u = "tailed-serifless"
 v = "straight-serifless"
 w = "straight-flat-top-serifless"
 x = "straight-serifless"
@@ -222,7 +222,7 @@ menu = 600
 css = 600
 
 [buildPlans.IosevkaCustom.widths.Normal]
-shape = 580
+shape = 570
 menu = 5
 css = "normal"
 
@@ -239,8 +239,8 @@ menu = "italic"
 css = "italic"
 
 [buildPlans.IosevkaCustom.metricOverride]
-cap = 700
-ascender = 725
-xHeight = 510
+cap = 652
+ascender = 672
+xHeight = 468
 sb = 'default_sb * 0.88'
 smallArchDepth = 230
