--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,12 +1,12 @@
 # vim:ft=config
 font-family = Iosevka Custom
-font-style = Medium
-font-style-italic = Medium
-font-style-bold = Bold
-font-style-bold-italic = Bold
+font-style = Retina
+font-style-italic = Retina
+font-style-bold = SemiBold
+font-style-bold-italic = SemiBold
 font-size = 16
-adjust-cell-height = 5
-adjust-cursor-height = 5
+adjust-cell-height = 6
+adjust-cursor-height = 6
 adjust-cell-width = 0
 
 # Ligatures test M ç á ã â ä à å æ ç é è ê ë í ì î ï ñ ó ò ô ö ø ú ù û ü ý ÿ
