--- a/fonts/iosevka-custom/private-build-plans.toml
+++ b/fonts/iosevka-custom/private-build-plans.toml
@@ -206,6 +206,11 @@ shape = 400
 menu = 400
 css = 400
 
+[buildPlans.IosevkaCustom.weights.Retina]
+shape = 450
+menu = 450
+css = 450
+
 [buildPlans.IosevkaCustom.weights.Bold]
 shape = 700
 menu = 700
@@ -222,7 +227,7 @@ menu = 600
 css = 600
 
 [buildPlans.IosevkaCustom.widths.Normal]
-shape = 570
+shape = 558
 menu = 5
 css = "normal"
 
@@ -239,8 +244,8 @@ menu = "italic"
 css = "italic"
 
 [buildPlans.IosevkaCustom.metricOverride]
-cap = 652
-ascender = 672
-xHeight = 468
+cap = 675
+ascender = 685
+xHeight = 475
 sb = 'default_sb * 0.88'
 smallArchDepth = 230
