--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,12 +1,12 @@
 # vim:ft=config
-font-family = Iosevka Custom
-font-style = Retina
-font-style-italic = Retina
+font-family = Source Code Pro
+font-style = Medium
+font-style-italic = Medium
 font-style-bold = SemiBold
 font-style-bold-italic = SemiBold
-font-size = 16
-adjust-cell-height = 6
-adjust-cursor-height = 6
+font-size = 14
+adjust-cell-height = 8
+adjust-cursor-height = 8
 adjust-cell-width = 0
 
 # Ligatures test M ç á ã â ä à å æ ç é è ê ë í ì î ï ñ ó ò ô ö ø ú ù û ü ý ÿ
@@ -28,8 +28,8 @@ palette = 8=#677289
 # cursor-color = #c0caf5
 # cursor-text = #1d202f
 
-background-opacity = 0.96
-background-blur-radius = 32
+background-opacity = 1.00
+# background-blur-radius = 32
 
 window-width = 156
 window-height = 50
