--- a/fonts/iosevka-custom/private-build-plans.toml
+++ b/fonts/iosevka-custom/private-build-plans.toml
@@ -31,7 +31,7 @@ capital-l = "serifless"
 capital-m = "hanging-serifless"
 capital-n = "standard-serifless"
 capital-p = "closed-serifless"
-capital-q = "crossing"
+capital-q = "curly-tailed"
 capital-r = "curly-serifless"
 capital-s = "serifless"
 capital-t = "serifless"
@@ -41,13 +41,13 @@ capital-w = "straight-serifless"
 capital-x = "straight-serifless"
 capital-y = "straight-serifless"
 capital-z = "straight-serifless"
-a = "single-storey-serifed"
+a = "double-storey-serifless"
 b = "toothed-serifless"
 c = "serifless"
 d = "toothed-serifless"
-e = "rounded"
-f = "flat-hook-serifless"
-g = "double-storey-open"
+e = "flat-crossbar"
+f = "serifless"
+g = "single-storey-serifless"
 h = "straight-serifless"
 i = "serifed"
 j = "serifed"
@@ -59,12 +59,12 @@ p = "eared-serifless"
 q = "straight-serifless"
 r = "serifless"
 s = "serifless"
-t = "flat-hook-short-neck2"
-u = "tailed-serifless"
+t = "bent-hook-short-neck2"
+u = "toothed-serifless"
 v = "straight-serifless"
 w = "straight-flat-top-serifless"
 x = "straight-serifless"
-y = "cursive-serifless"
+y = "straight-turn-serifless"
 z = "straight-serifless"
 capital-eszet = "rounded-serifless"
 long-s = "bent-hook-diagonal-tailed"
@@ -129,7 +129,7 @@ capital-l = "serifless"
 capital-m = "hanging-serifless"
 capital-n = "standard-serifless"
 capital-p = "closed-serifless"
-capital-q = "crossing"
+capital-q = "curly-tailed"
 capital-r = "curly-serifless"
 capital-s = "serifless"
 capital-t = "serifless"
@@ -139,13 +139,13 @@ capital-w = "straight-serifless"
 capital-x = "straight-serifless"
 capital-y = "straight-serifless"
 capital-z = "straight-serifless"
-a = "single-storey-serifed"
+a = "double-storey-serifless"
 b = "toothed-serifless"
 c = "serifless"
 d = "toothed-serifless"
-e = "rounded"
-f = "flat-hook-serifless"
-g = "double-storey-open"
+e = "flat-crossbar"
+f = "serifless"
+g = "single-storey-serifless"
 h = "straight-serifless"
 i = "serifed"
 j = "serifed"
@@ -157,12 +157,12 @@ p = "eared-serifless"
 q = "straight-serifless"
 r = "serifless"
 s = "serifless"
-t = "flat-hook-short-neck2"
-u = "tailed-serifless"
+t = "bent-hook-short-neck2"
+u = "toothed-serifless"
 v = "straight-serifless"
 w = "straight-flat-top-serifless"
 x = "straight-serifless"
-y = "cursive-serifless"
+y = "straight-turn-serifless"
 z = "straight-serifless"
 capital-eszet = "rounded-serifless"
 long-s = "bent-hook-diagonal-tailed"
@@ -222,12 +222,12 @@ menu = 500
 css = 500
 
 [buildPlans.IosevkaCustom.weights.SemiBold]
-shape = 600
+shape = 562
 menu = 600
 css = 600
 
 [buildPlans.IosevkaCustom.widths.Normal]
-shape = 558
+shape = 554
 menu = 5
 css = "normal"
 
@@ -244,8 +244,8 @@ menu = "italic"
 css = "italic"
 
 [buildPlans.IosevkaCustom.metricOverride]
-cap = 675
-ascender = 685
-xHeight = 475
+cap = 655
+ascender = 675
+xHeight = 465
 sb = 'default_sb * 0.88'
 smallArchDepth = 230
