--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,12 +1,13 @@
 # vim:ft=config
 font-family = Source Code Pro
-font-size = 14.4
+font-size = 13.6
 font-style-bold = SemiBold
 font-style-italic = false
 font-style-bold-italic = false
 font-thicken = true
 adjust-cell-height = 8
 adjust-cursor-height = 8
+adjust-cell-width = -1
 
 # Ligatures test M ç á ã â ä à å æ ç é è ê ë í ì î ï ñ ó ò ô ö ø ú ù û ü ý ÿ
 # filter |> === := != => -> >= <= /\ </> /\ | #{} #() #[] $ 0 - -- --- -h --h ---h
@@ -27,10 +28,10 @@ palette = 8=#677289
 # cursor-color = #c0caf5
 # cursor-text = #1d202f
 
-background-opacity = 0.85
+background-opacity = 0.80
 background-blur-radius = 32
 
-window-width = 152
+window-width = 162
 window-height = 50
 
 cursor-style = block
