--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -5,9 +5,9 @@ font-style-bold = SemiBold
 font-style-italic = false
 font-style-bold-italic = false
 font-thicken = true
+font-thicken-strength = 10
 adjust-cell-height = 8
 adjust-cursor-height = 8
-adjust-cell-width = -1
 
 # Ligatures test M ç á ã â ä à å æ ç é è ê ë í ì î ï ñ ó ò ô ö ø ú ù û ü ý ÿ
 # filter |> === := != => -> >= <= /\ </> /\ | #{} #() #[] $ 0 - -- --- -h --h ---h
