--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,13 +1,9 @@
 # vim:ft=config
-font-family = Source Code Pro
-font-size = 14.0
-font-style-bold = SemiBold
-font-style-italic = false
-font-style-bold-italic = false
-font-thicken = true
-font-thicken-strength = 120
-adjust-cell-height = 9
-adjust-cursor-height = 9
+font-family = Iosevka Custom
+font-size = 16.0
+font-style = Retina
+adjust-cell-height = 5
+adjust-cursor-height = 5
 
 # Ligatures test M ç á ã â ä à å æ ç é è ê ë í ì î ï ñ ó ò ô ö ø ú ù û ü ý ÿ
 # filter |> === := != => -> >= <= /\ </> /\ | #{} #() #[] $ 0 - -- --- -h --h ---h
@@ -31,7 +27,7 @@ palette = 8=#677289
 # background-opacity = 0.80
 # background-blur-radius = 32
 
-window-width = 162
+window-width = 172
 window-height = 50
 
 cursor-style = block
