--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -68,7 +68,7 @@ set -g status-left-length 100
 
 # set -g @onedark_widgets
 
-source "$tmux_dir/tokyonight.conf"
+source "$tmux_dir/catppuccin.conf"
 
 # Rebind resurrect
 set -g @resurrect-save 'S'
