--- a/fonts/iosevka-custom/private-build-plans.toml
+++ b/fonts/iosevka-custom/private-build-plans.toml
@@ -21,16 +21,15 @@ capital-k = "curly-serifless"
 capital-m = "slanted-sides-hanging-serifless"
 capital-r = "curly-serifless"
 a = "single-storey-earless-corner-tailed"
-e = "flat-crossbar"
 f = "flat-hook-serifless"
-g = "single-storey-flat-hook-serifless"
-j = "flat-hook-serifed"
+# g = "single-storey-flat-hook-serifless"
 k = "curly-serifless"
 l = "serifed-semi-tailed"
-t = "flat-hook-short-neck2"
-u = "tailed-serifless"
+t = "bent-hook-short-neck2"
+# u = "tailed-serifless"
 w = "straight-flat-top-serifless"
 y = "straight-turn-serifless"
+asterisk = "penta-low"
 paren = "large-contour"
 brace = "curly-flat-boundary"
 ampersand = "upper-open"
@@ -53,16 +52,15 @@ capital-k = "curly-serifless"
 capital-m = "slanted-sides-hanging-serifless"
 capital-r = "curly-serifless"
 a = "single-storey-earless-corner-tailed"
-e = "flat-crossbar"
 f = "flat-hook-serifless"
-g = "single-storey-flat-hook-serifless"
-j = "flat-hook-serifed"
+# g = "single-storey-flat-hook-serifless"
 k = "curly-serifless"
 l = "serifed-semi-tailed"
-t = "flat-hook-short-neck2"
-u = "tailed-serifless"
+t = "bent-hook-short-neck2"
+# u = "tailed-serifless"
 w = "straight-flat-top-serifless"
 y = "straight-turn-serifless"
+asterisk = "penta-low"
 paren = "large-contour"
 brace = "curly-flat-boundary"
 ampersand = "upper-open"
@@ -112,8 +110,8 @@ menu = "italic"
 css = "italic"
 
 [buildPlans.IosevkaCustom.metricOverride]
-cap = 645
-ascender = 685
+cap = 635
+ascender = 675
 xHeight = 470
 sb = 'default_sb * 0.88'
 smallArchDepth = 230
