--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,9 +1,11 @@
 # vim:ft=config
 font-family = Iosevka Custom
-font-size = 15.6
+font-size = 13.6
 font-style = Medium
-adjust-cell-height = 5
-adjust-cursor-height = 5
+font-style-italic = false
+font-style-bold-italic = false
+adjust-cell-height = 7
+adjust-cursor-height = 7
 
 # Ligatures test M ç á ã â ä à å æ ç é è ê ë í ì î ï ñ ó ò ô ö ø ú ù û ü ý ÿ
 # filter |> === := != => -> >= <= /\ </> /\ | #{} #() #[] $ 0 - -- --- -h --h ---h
@@ -26,11 +28,11 @@ palette = 8=#677289
 cursor-color = #c0caf5
 cursor-text = #1d202f
 
-background-opacity = 0.88
-background-blur-radius = 32
+# background-opacity = 0.88
+# background-blur-radius = 32
 
 window-width = 152
-window-height = 50
+window-height = 60
 
 cursor-style = block
 shell-integration-features = no-cursor
