--- a/fonts/iosevka-custom/private-build-plans.toml
+++ b/fonts/iosevka-custom/private-build-plans.toml
@@ -12,14 +12,10 @@ seven = "bend-serifless"
 eight = "two-circles"
 nine = "open-contour"
 zero = "slashed-split"
-capital-b = "standard-serifless"
-capital-d = "more-rounded-serifless"
-capital-g = "toothless-rounded-serifless-hooked"
-capital-j = "serifless"
-# f = "flat-hook-serifless"
-# j = "flat-hook-serifed"
-r = "corner-hooked-serifed"
-t = "bent-hook-short-neck2"
+f = "flat-hook-serifless"
+j = "flat-hook-serifed"
+r = "serifed"
+t = "flat-hook-short-neck2"
 w = "straight-flat-top-serifless"
 y = "straight-turn-serifless"
 asterisk = "penta-low"
@@ -36,12 +32,7 @@ seven = "bend-serifless"
 eight = "two-circles"
 nine = "open-contour"
 zero = "slashed-split"
-capital-b = "standard-serifless"
-capital-d = "more-rounded-serifless"
-capital-g = "toothless-rounded-serifless-hooked"
-capital-r = "curly-serifless"
-# j = "flat-hook-serifed"
-r = "corner-hooked-serifed"
+r = "serifed"
 t = "bent-hook-short-neck2"
 w = "straight-flat-top-serifless"
 asterisk = "penta-low"
