--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,8 +1,10 @@
 # vim:ft=config
-font-family = JetBrains Mono NL
-font-size = 14.0
+font-family = Source Code Pro
+font-size = 13.0
 font-style-italic = false
 font-style-bold-italic = false
+font-thicken = true
+font-thicken-strength = 50
 adjust-cell-height = 7
 adjust-cursor-height = 7
 
@@ -29,7 +31,7 @@ cursor-text = #1d202f
 # background-opacity = 0.88
 # background-blur-radius = 32
 
-window-width = 152
+window-width = 165
 window-height = 60
 
 cursor-style = block
