--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -3,8 +3,8 @@ font-family = JetBrains Mono NL
 font-size = 13.0
 font-style-italic = false
 font-style-bold-italic = false
-font-thicken = true
-font-thicken-strength = 50
+# font-thicken = true
+# font-thicken-strength = 50
 adjust-cell-height = 6
 adjust-cursor-height = 6
 
