--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,8 +1,8 @@
 # vim:ft=config
-font-family = Maple Mono Normal NL
-font-size = 13.0
+font-family = Maple Mono NL
+font-size = 14.0
 # font-thicken = true
-# font-thicken-strength = 50
+# font-thicken-strength = 0
 adjust-cell-height = 6
 adjust-cursor-height = 6
 
