--- a/.config/tmux/tokyonight.conf
+++ b/.config/tmux/tokyonight.conf
@@ -35,7 +35,7 @@ set -g @nova-segment-mode-colors "#9ece6a #1a1b26"  # Green on darker background
 set -g @nova-segment-session "#{session_name}"
 set -g @nova-segment-session-colors "$seg_a"
 
-set -g @nova-segment-mem-cpu "#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --interval 2)"
+set -g @nova-segment-mem-cpu "#(tmux-mem-cpu-load --interval 2)"
 set -g @nova-segment-mem-cpu-colors "$seg_b"
 
 set -g @nova-segments-0-left "session"
