--- a/.config/tmux/catppuccin.conf
+++ b/.config/tmux/catppuccin.conf
@@ -37,7 +37,7 @@ set -g @nova-segment-mode-colors "#a6da95 #24273a"
 set -g @nova-segment-session "#{session_name}"
 set -g @nova-segment-session-colors "$seg_a"
 
-set -g @nova-segment-mem-cpu "#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --interval 2)"
+set -g @nova-segment-mem-cpu "#(tmux-mem-cpu-load --interval 2)"
 set -g @nova-segment-mem-cpu-colors "$seg_b"
 
 set -g @nova-segments-0-left "session"
