--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,5 +1,5 @@
 # vim:ft=config
-font-family = Source Code Pro
+font-family = Maple Mono NL
 font-size = 13.6
 # font-thicken = true
 # font-thicken-strength = 0
