--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,10 +1,10 @@
 # vim:ft=config
-font-family = Maple Mono NL
-font-size = 13.6
-# font-thicken = true
-# font-thicken-strength = 0
-adjust-cell-height = 5
-adjust-cursor-height = 5
+font-family = Source Code Pro
+font-size = 14.0
+font-thicken = true
+font-thicken-strength = 0
+adjust-cell-height = 7
+adjust-cursor-height = 7
 
 # Ligatures test M ç á ã â ä à å æ ç é è ê ë í ì î ï ñ ó ò ô ö ø ú ù û ü ý ÿ
 # filter |> === := != => -> >= <= /\ </> /\ | #{} #() #[] $ 0 - -- --- -h --h ---h
