--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,8 +1,6 @@
 # vim:ft=config
-font-family = Source Code Pro
+font-family = JetBrains Mono NL
 font-size = 14.0
-font-thicken = true
-font-thicken-strength = 0
 adjust-cell-height = 7
 adjust-cursor-height = 7
 
