--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -3,8 +3,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'o0th/tmux-nova'
-
-tmux_dir="~/.config/tmux"
+set -g @plugin 'erikw/tmux-dark-notify'
 
 # upgrade $TERM
 set-option -g default-terminal "tmux-256color"
@@ -67,7 +66,10 @@ set -g status-left-length 100
 
 # set -g @onedark_widgets
 
-source "$tmux_dir/tokyonight.conf"
+set -g @dark-notify-theme-path-light "$HOME/.config/tmux/catppuccin-latte.conf"
+set -g @dark-notify-theme-path-dark "$HOME/.config/tmux/catppuccin-macchiato.conf"
+
+bind r source "~/.config/tmux/tmux.conf"
 
 # Rebind resurrect
 set -g @resurrect-save 'S'
@@ -89,4 +91,8 @@ set-option -g set-titles-string "#{pane_current_path}"
 # bind -n C-Tab send-keys "\x1b[9;5u"
 # bind -n C-S-Tab send-keys "\x1b[9;6u"
 
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
+
+if-shell "test -e ~/.local/state/tmux/tmux-dark-notify-theme.conf" \
+     "source ~/.local/state/tmux/tmux-dark-notify-theme.conf"
+
