--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -3,7 +3,9 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'o0th/tmux-nova'
-set -g @plugin 'erikw/tmux-dark-notify'
+# set -g @plugin 'erikw/tmux-dark-notify'
+
+TMUX_DIR="~/.config/tmux"
 
 # upgrade $TERM
 set-option -g default-terminal "tmux-256color"
@@ -66,8 +68,10 @@ set -g status-left-length 100
 
 # set -g @onedark_widgets
 
-set -g @dark-notify-theme-path-light "$HOME/.config/tmux/catppuccin-latte.conf"
-set -g @dark-notify-theme-path-dark "$HOME/.config/tmux/catppuccin-macchiato.conf"
+# set -g @dark-notify-theme-path-light "$HOME/.config/tmux/catppuccin-macchiato.conf"
+# set -g @dark-notify-theme-path-dark "$HOME/.config/tmux/catppuccin-macchiato.conf"
+
+source "$TMUX_DIR/catppuccin-macchiato.conf"
 
 bind r source "~/.config/tmux/tmux.conf"
 
