--- a/.config/tmux/tokyonight.conf
+++ b/.config/tmux/tokyonight.conf
@@ -11,13 +11,13 @@ set -g @nova-rows 0
 
 ### COLORS ###
 # Tokyo Night Storm colors
-b_bg="#282d42"             # Background
+b_bg="#24283b"             # Background (official storm background)
 seg_a="#9d7cd8 #1a1b26"    # Purple on darker background
 seg_b="$b_bg #a9b1d6"      # Foreground text on background
 inactive_bg="#1f2335"      # Inactive background
 inactive_fg="#737aa2"      # Inactive foreground
 active_fg="#c0caf5"        # Active foreground
-active_bg=$b_bg            # Active background
+active_bg="#2e3144"        # Active background (lighter for contrast)
 
 set -gw window-status-current-style bold
 set -g "@nova-status-style-bg" "$inactive_bg"
