--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,11 +1,11 @@
 # vim:ft=config
-font-family = Source Code Pro
-font-size = 14.0
-adjust-cell-height = 8
-adjust-cursor-height = 8
+font-family = SauceCodePro Nerd Font
+font-size = 13.0
+adjust-cell-height = 6
+adjust-cursor-height = 6
 
-# font-thicken = true
-# font-thicken-strength = 0
+font-thicken = true
+font-thicken-strength = 0
 
 # Ligatures test M ç á ã â ä à å æ ç é è ê ë í ì î ï ñ ó ò ô ö ø ú ù û ü ý ÿ
 # filter |> === := != => -> >= <= /\ </> /\ | #{} #() #[] $ 0 - -- --- -h --h ---h
@@ -16,7 +16,8 @@ font-codepoint-map = U+E0A0,U+21E1,U+21E2,U+21E3 = MesloLGL Nerd Font
 
 adjust-underline-position = 3
 
-theme = light:catppuccin-macchiato.conf,dark:catppuccin-macchiato.conf
+theme = Tokyonight Storm
+# theme = light:catppuccin-macchiato.conf,dark:catppuccin-macchiato.conf
 
 # background-opacity = 0.88
 # background-blur-radius = 32
