--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,11 +1,11 @@
 # vim:ft=config
-font-family = SauceCodePro Nerd Font
-font-size = 13.0
+font-family = Code Saver
+font-size = 15.0
 adjust-cell-height = 6
 adjust-cursor-height = 6
 
-font-thicken = true
-font-thicken-strength = 0
+# font-thicken = true
+# font-thicken-strength = 0
 
 # Ligatures test M ç á ã â ä à å æ ç é è ê ë í ì î ï ñ ó ò ô ö ø ú ù û ü ý ÿ
 # filter |> === := != => -> >= <= /\ </> /\ | #{} #() #[] $ 0 - -- --- -h --h ---h
@@ -22,7 +22,7 @@ theme = Tokyonight Storm
 # background-opacity = 0.88
 # background-blur-radius = 32
 
-window-width = 170
+window-width = 160
 window-height = 60
 
 cursor-style = block
