--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,10 +1,11 @@
 # vim:ft=config
-font-family = Source Code Pro
-font-size = 15.0
+font-family = JetBrains Mono NL
+font-size = 13.3
 adjust-cell-height = 6
 adjust-cursor-height = 6
 
-# font-thicken = true
+font-thicken = true
+font-thicken-strength = 0
 
 # Ligatures test M ç á ã â ä à å æ ç é è ê ë í ì î ï ñ ó ò ô ö ø ú ù û ü ý ÿ
 # filter |> === := != => -> >= <= /\ </> /\ | #{} #() #[] $ 0 - -- --- -h --h ---h
@@ -17,11 +18,12 @@ adjust-underline-position = 3
 
 theme = Tokyonight Storm
 # theme = light:catppuccin-macchiato.conf,dark:catppuccin-macchiato.conf
+palette=8=#677289
 
-# background-opacity = 0.88
-# background-blur-radius = 32
+background-opacity = 0.90
+background-blur-radius = 32
 
-window-width = 160
+window-width = 170
 window-height = 60
 
 cursor-style = block
