--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,5 +1,5 @@
 # vim:ft=config
-font-family = Maple Mono Normal NL
+font-family = JetBrains Mono NL
 font-size = 14.0
 adjust-cell-height = 6
 adjust-cursor-height = 6
