--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,8 +1,8 @@
 # vim:ft=config
 font-family = Source Code Pro
 font-size = 13.0
-adjust-cell-height = 4
-adjust-cursor-height = 4
+adjust-cell-height = 6
+adjust-cursor-height = 6
 
 # font-thicken = true
 # font-thicken-strength = 150
@@ -20,13 +20,14 @@ theme = Tokyonight Storm
 # theme = light:catppuccin-macchiato.conf,dark:catppuccin-macchiato.conf
 palette=8=#677289
 
-background-opacity = 0.90
+background-opacity = 0.85
 background-blur-radius = 32
 
 window-width = 170
 window-height = 60
 
 cursor-style = block
+cursor-style-blink = true
 shell-integration-features = no-cursor
 
 macos-option-as-alt = left
