--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -4,7 +4,7 @@ font-size = 13.0
 adjust-cell-height = 6
 adjust-cursor-height = 6
 
-# font-thicken = true
+font-thicken = true
 # font-thicken-strength = 150
 
 # Ligatures test M ç á ã â ä à å æ ç é è ê ë í ì î ï ñ ó ò ô ö ø ú ù û ü ý ÿ
@@ -20,8 +20,8 @@ theme = Tokyonight Storm
 # theme = light:catppuccin-macchiato.conf,dark:catppuccin-macchiato.conf
 palette=8=#677289
 
-background-opacity = 0.85
-background-blur-radius = 32
+background-opacity = 0.82
+background-blur-radius = 48
 
 window-width = 170
 window-height = 60
