--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -5,7 +5,7 @@ adjust-cell-height = 6
 adjust-cursor-height = 6
 
 font-thicken = true
-# font-thicken-strength = 150
+font-thicken-strength = 150
 
 # Ligatures test M ç á ã â ä à å æ ç é è ê ë í ì î ï ñ ó ò ô ö ø ú ù û ü ý ÿ
 # filter |> === := != => -> >= <= /\ </> /\ | #{} #() #[] $ 0 - -- --- -h --h ---h
