--- a/.gitconfig
+++ b/.gitconfig
@@ -3,8 +3,8 @@
 	email = gustavo@gbsoft.net
 [alias]
   st = status
-  lg = log  --graph --pretty=format:'%C(auto)%h -%C(auto)%d %s %C(green)(%cr) %C(blue)<%an>' --abbrev-commit --date=relative
-  lga = log --graph --pretty=format:'%C(auto)%h -%C(auto)%d %s %C(green)(%cr) %C(blue)<%an>' --abbrev-commit --date=relative --all
+  lg = log  --graph --pretty=format:'%C(auto)%h -%C(auto)%d %s %C(green)(%cr) %C(blue)<%ae>' --abbrev-commit --date=relative
+  lga = log --graph --pretty=format:'%C(auto)%h -%C(auto)%d %s %C(green)(%cr) %C(blue)<%ae>' --abbrev-commit --date=relative --all
   cm = commit
   co = checkout
   sw = switch
