--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -4,7 +4,7 @@ font-size = 15.0
 adjust-cell-height = 8
 adjust-cursor-height = 8
 
-# font-thicken = true
+font-thicken = true
 # font-thicken-strength = 150
 
 # Ligatures test M ç á ã â ä à å æ ç é è ê ë í ì î ï ñ ó ò ô ö ø ú ù û ü ý ÿ
