--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,5 +1,7 @@
 # vim:ft=config
 font-family = Source Code Pro
+font-style = Medium
+font-style-italic = Medium Italic
 font-size = 14.0
 adjust-cell-height = 6
 adjust-cursor-height = 6
