--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,8 +1,8 @@
 # vim:ft=config
-font-family = Source Code Pro
-font-size = 16.0
-adjust-cell-height = 8
-adjust-cursor-height = 8
+font-family = Liga Mono Fixed
+font-size = 18.0
+adjust-cell-height = 10
+adjust-cursor-height = 10
 
 # font-thicken = true
 # font-thicken-strength = 0
