--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -4,8 +4,8 @@ font-size = 18.0
 adjust-cell-height = 8
 adjust-cursor-height = 8
 
-# font-thicken = true
-# font-thicken-strength = 0
+font-thicken = true
+font-thicken-strength = 0
 
 # Ligatures test M ç á ã â ä à å æ ç é è ê ë í ì î ï ñ ó ò ô ö ø ú ù û ü ý ÿ
 # filter |> === := != => -> >= <= /\ </> /\ | #{} #() #[] $ 0 - -- --- -h --h ---h
