--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -71,7 +71,7 @@ set -g status-left-length 100
 # set -g @dark-notify-theme-path-light "$HOME/.config/tmux/catppuccin-macchiato.conf"
 # set -g @dark-notify-theme-path-dark "$HOME/.config/tmux/catppuccin-macchiato.conf"
 
-source "$TMUX_DIR/one-dark.conf"
+source "$TMUX_DIR/tokyonight.conf"
 
 bind r source "~/.config/tmux/tmux.conf"
 
