--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,11 +1,11 @@
 # vim:ft=config
-font-family = Source Code Pro
-font-size = 16
+font-family = Source Code Pro Custom
+font-size = 17
 adjust-cell-height = 10
 adjust-cursor-height = 10
 
-font-thicken = true
-font-thicken-strength = 100
+# font-thicken = true
+# font-thicken-strength = 100
 
 # Ligatures test M ç á ã â ä à å æ ç é è ê ë í ì î ï ñ ó ò ô ö ø ú ù û ü ý ÿ
 # filter |> === := != => -> >= <= /\ </> /\ | #{} #() #[] $ 0 - -- --- -h --h ---h
