--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -6,8 +6,8 @@ font-size = 17
 adjust-cell-height = 10
 adjust-cursor-height = 10
 
-# font-thicken = true
-# font-thicken-strength = 100
+font-thicken = true
+font-thicken-strength = 0
 
 # Ligatures test M ç á ã â ä à å æ ç é è ê ë í ì î ï ñ ó ò ô ö ø ú ù û ü ý ÿ
 # filter |> === := != => -> >= <= /\ </> /\ | #{} #() #[] $ 0 - -- --- -h --h ---h
