--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,7 +1,7 @@
 # vim:ft=config
-font-family = Source Code Pro Custom
-font-style-bold = SemiBold
-font-style-bold-italic = SemiBold Italic
+font-family = Liga Mono Fixed
+# font-style-bold = SemiBold
+# font-style-bold-italic = SemiBold Italic
 font-size = 17.0
 adjust-cell-height = 12
 adjust-cursor-height = 12
@@ -9,7 +9,7 @@ adjust-cursor-height = 12
 font-thicken = true
 font-thicken-strength = 0
 
-# Ligatures test M ç á ã â ä à å æ ç é è ê ë í ì î ï ñ ó ò ô ö ø ú ù û ü ý ÿ
+# Ligatures test M ç á ã â ä à å æ ç é è ê ë í ì î ï ñ ó ò ô ö ø ú ù û ü ý ÿ k v w x
 # filter |> === := != => -> >= <= /\ </> /\ | #{} #() #[] $ 0 - -- --- -h --h ---h
 #   ✔ ## ### @
 
