--- a/.gitconfig
+++ b/.gitconfig
@@ -56,3 +56,8 @@
   path = "~/.gitconfig-matt"
 [includeIf "gitdir:~/repos/work/advolve/"]
   path = "~/.gitconfig-advolve"
+[filter "lfs"]
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
